--- a/backend-2-k8s/service.yaml
+++ b/backend-2-k8s/service.yaml
@@ -1,7 +1,7 @@
   apiVersion: "v1"
   kind: "Service"
   metadata:
-    name: "whereami-grpc"
+    name: "whereami-backend-2-grpc"
     annotations:
       cloud.google.com/neg: '{"exposed_ports":{"9090":{}}}'
   spec:
@@ -9,6 +9,6 @@
     - port: 9090
       protocol: TCP
       name: grpc
+      targetPort: 9090
     selector:
-      app: "whereami-grpc"
-    type: "LoadBalancer"
+      app: "whereami-backend-2-grpc"
