--- a/backend-v2/deployment.yaml
+++ b/backend-v2/deployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: whereami-backend-2-grpc
+  name: whereami-backend-v2-grpc
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: whereami-backend-2-grpc
+      app: whereami-backend-v2-grpc
   template:
     metadata:
       labels:
-        app: whereami-backend-2-grpc
+        app: whereami-backend-v2-grpc
         version: v1
     spec:
-      serviceAccountName: whereami-backend-2-grpc-ksa
+      serviceAccountName: whereami-backend-v2-grpc-ksa
       containers:
-      - name: whereami-backend-2-grpc
+      - name: whereami-backend-v2-grpc
         image: gcr.io/google-samples/whereami:v1.1.2
         ports:
           - name: grpc
@@ -46,25 +46,25 @@ spec:
           - name: BACKEND_ENABLED
             valueFrom:
               configMapKeyRef:
-                name: whereami-backend-2-grpc-configmap
+                name: whereami-backend-v2-grpc-configmap
                 key: BACKEND_ENABLED
           - name: BACKEND_SERVICE
             valueFrom:
               configMapKeyRef:
-                name: whereami-backend-2-grpc-configmap
+                name: whereami-backend-v2-grpc-configmap
                 key: BACKEND_SERVICE
           - name: METADATA
             valueFrom:
               configMapKeyRef:
-                name: whereami-backend-2-grpc-configmap
+                name: whereami-backend-v2-grpc-configmap
                 key: METADATA
           - name: ECHO_HEADERS
             valueFrom:
               configMapKeyRef:
-                name: whereami-backend-2-grpc-configmap
+                name: whereami-backend-v2-grpc-configmap
                 key: ECHO_HEADERS
           - name: GRPC_ENABLED
             valueFrom:
               configMapKeyRef:
-                name: whereami-backend-2-grpc-configmap
+                name: whereami-backend-v2-grpc-configmap
                 key: GRPC_ENABLED
