--- a/frontend/deployment.yaml
+++ b/frontend/deployment.yaml
@@ -1,21 +1,43 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: whereami-backend-1-grpc
+  name: whereami-grpc-frontend
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: whereami-backend-1-grpc
+      app: whereami-grpc-frontend
   template:
     metadata:
       labels:
-        app: whereami-backend-1-grpc
+        app: whereami-grpc-frontend
         version: v1
     spec:
-      serviceAccountName: whereami-backend-1-grpc-ksa
+      serviceAccountName: whereami-grpc-frontend-ksa
+      initContainers:
+      - args:
+        - --output
+        - "/tmp/bootstrap/td-grpc-bootstrap.json"
+        image: gcr.io/trafficdirector-prod/td-grpc-bootstrap:0.9.0
+
+        imagePullPolicy: IfNotPresent
+        name: grpc-td-init
+        resources:
+          limits:
+            cpu: 100m
+            memory: 100Mi
+          requests:
+            cpu: 10m
+            memory: 100Mi
+        volumeMounts:
+        - name: grpc-td-conf
+          mountPath: /tmp/bootstrap/
+      volumes:
+      - name: grpc-td-conf
+        emptyDir:
+          medium: Memory
       containers:
-      - name: whereami-backend-1-grpc
+      - name: whereami-grpc-frontend
         image: gcr.io/google-samples/whereami:v1.1.2
         ports:
           - name: grpc
@@ -31,6 +53,8 @@ spec:
           initialDelaySeconds: 10
           periodSeconds: 2
         env:
+          - name: GRPC_XDS_BOOTSTRAP
+            value: "/tmp/grpc-xds/td-grpc-bootstrap.json"
           - name: POD_NAMESPACE
             valueFrom:
               fieldRef:
@@ -46,25 +70,28 @@ spec:
           - name: BACKEND_ENABLED
             valueFrom:
               configMapKeyRef:
-                name: whereami-backend-1-grpc-configmap
+                name: whereami-grpc-frontend-configmap
                 key: BACKEND_ENABLED
           - name: BACKEND_SERVICE
             valueFrom:
               configMapKeyRef:
-                name: whereami-backend-1-grpc-configmap
+                name: whereami-grpc-frontend-configmap
                 key: BACKEND_SERVICE
           - name: METADATA
             valueFrom:
               configMapKeyRef:
-                name: whereami-backend-1-grpc-configmap
+                name: whereami-grpc-frontend-configmap
                 key: METADATA
           - name: ECHO_HEADERS
             valueFrom:
               configMapKeyRef:
-                name: whereami-backend-1-grpc-configmap
+                name: whereami-grpc-frontend-configmap
                 key: ECHO_HEADERS
           - name: GRPC_ENABLED
             valueFrom:
               configMapKeyRef:
-                name: whereami-backend-1-grpc-configmap
+                name: whereami-grpc-frontend-configmap
                 key: GRPC_ENABLED
+        volumeMounts:
+        - name: grpc-td-conf
+          mountPath: /tmp/grpc-xds/
