--- a/frontend/service.yaml
+++ b/frontend/service.yaml
@@ -1,7 +1,7 @@
   apiVersion: "v1"
   kind: "Service"
   metadata:
-    name: "whereami-backend-2-grpc"
+    name: "whereami-grpc-frontend"
     annotations:
       cloud.google.com/neg: '{"exposed_ports":{"9090":{}}}'
   spec:
@@ -9,6 +9,6 @@
     - port: 9090
       protocol: TCP
       name: grpc
-      targetPort: 9090
     selector:
-      app: "whereami-backend-2-grpc"
+      app: "whereami-grpc-frontend"
+    type: "LoadBalancer"
