--- a/frontend/deployment.yaml
+++ b/frontend/deployment.yaml
@@ -38,7 +38,7 @@ spec:
           medium: Memory
       containers:
       - name: whereami-grpc-frontend
-        image: gcr.io/google-samples/whereami:v1.1.3
+        image: gcr.io/grpc-traffic-director-demo/whereami:mtls01
         ports:
           - name: grpc
             containerPort: 9090
